# RUST-Newcomer-Development-Program

./: .gitignore  README.md
demo/crate_demo/: Cargo.toml  README.md
demo/crate_demo/conf/: Poem.toml
demo/crate_demo/src/: conf.rs  environment.rs  err.rs  lib.rs  main.rs
demo/crate_demo_test/: Cargo.toml
demo/crate_demo_test/src/: main.rs
ntex_demo/: .env  Cargo.toml  README.md
ntex_demo/src/: errors.rs  main.rs
ntex_demo/src/api/: article.rs  login.rs  mod.rs
ntex_demo/src/middlewares/: auth.rs
ntex_demo/src/models/: article.rs  user.rs
s01/: README.md
s01/hello/: Cargo.toml
s01/hello/src/: hp.rs  lib.rs
s01/s01_1/: Cargo.toml
s01/s01_1/src/: main.rs
s01/s01_10/: Cargo.toml
s01/s01_10/src/: hello.rs  hps.rs  lib.rs  main.rs
s01/s01_11/: Cargo.toml
s01/s01_11/src/: main.rs
s01/s01_12/: Cargo.toml
s01/s01_12/src/: main.rs
s01/s01_13/: Cargo.toml
s01/s01_13/src/: main.rs
s01/s01_14/: Cargo.toml
s01/s01_14/src/: main.rs
s01/s01_15/: Cargo.toml  hello.txt
s01/s01_15/src/: main.rs
s01/s01_16/: Cargo.toml
s01/s01_16/src/: main.rs
s01/s01_17/: Cargo.toml
s01/s01_17/src/: main.rs
s01/s01_18/: Cargo.toml
s01/s01_18/src/: main.rs
s01/s01_19/: Cargo.toml
s01/s01_19/src/: main.rs
s01/s01_2/: Cargo.toml
s01/s01_2/src/: main.rs
s01/s01_20/: Cargo.toml
s01/s01_20/src/: main.rs
s01/s01_21/: Cargo.toml
s01/s01_21/src/: main.rs
s01/s01_22/: Cargo.toml
s01/s01_22/src/: main.exs  main.go  main.php  main.ts
s01/s01_3/: Cargo.toml
s01/s01_3/src/: main.rs
s01/s01_4/: Cargo.toml
s01/s01_4/src/: main.rs
s01/s01_5/: Cargo.toml
s01/s01_5/src/: main.rs
s01/s01_6/: Cargo.toml
s01/s01_6/src/: main.rs
s01/s01_7/: Cargo.toml
s01/s01_7/src/: main.rs
s01/s01_8/: Cargo.toml
s01/s01_8/src/: main.rs
s01/s01_9/: Cargo.toml
s01/s01_9/src/: main.rs
s01_new/s01/: Cargo.toml
s01_new/s01/src/: main.rs
s01_new/s02/: Cargo.toml
s01_new/s02/src/: main.rs
s01_new/s03/: Cargo.toml
s01_new/s03/src/: main.rs
s01_new/s04/: Cargo.toml
s01_new/s04/src/: main.rs
s01_new/s05/: Cargo.toml
s01_new/s05/src/: main.rs
s01_new/s06/: Cargo.toml
s01_new/s06/src/: main.rs
s01_new/s07/: Cargo.toml
s01_new/s07/src/: main.rs
s01_new/s08/: Cargo.toml
s01_new/s08/src/: main.rs
s01_new/s09/: Cargo.toml
s01_new/s09/src/: main.rs
s01_new/s10/: Cargo.toml
s01_new/s10/src/: hello.rs  lib.rs  main.rs  ref_cell_study.rs  threads.rs
s01_new/s11/: Cargo.toml
s01_new/s11/src/: main.rs
s02/: READMRE.md
s02/cli_list/: Cargo.toml
s02/cli_list/src/: main.rs
s02/tcp_client/: Cargo.toml
s02/tcp_client/src/: main.rs
s02/tcp_server/: Cargo.toml
s02/tcp_server/src/: main.rs
s02/tcp_todo/caesar/: Cargo.toml
s02/tcp_todo/caesar/src/: core.rs  define.rs  lib.rs  main.rs
s02/tcp_todo/common/: Cargo.toml
s02/tcp_todo/pc/: Cargo.toml
s02/tcp_todo/pt/: Cargo.toml
s02/udp_client/: Cargo.toml
s02/udp_client/src/: main.rs
s02/udp_server/: Cargo.toml
s02/udp_server/src/: main.rs
s03/: README.md
s03/std_1/: Cargo.toml
s03/std_1/src/: main.rs
s03/std_2/: Cargo.toml
s03/std_2/src/: main.rs
s03/std_3/: Cargo.toml
s03/std_3/src/: main.rs
s03/std_4/: Cargo.toml
s03/std_4/src/: client.rs  common.rs  lib.rs  main.rs  server.rs
s03/std_5/: Cargo.toml
s04/s04_1/: Cargo.toml
s04/s04_1/src/: main.rs
s04/s04_2/: Cargo.toml  auto.sql
s04/s04_2/src/: main.rs
s05/std_1/: Cargo.toml
s05/std_1/src/: main.rs
s06/std_1/: Cargo.toml
s06/std_1/src/: main.rs
s07/demo1/: Cargo.toml
s07/demo1/src/: main.rs
s07/s07_1/src/: main.rs
s07/s07_2/: Cargo.toml
s07/s07_2/src/: main.rs
s07_1/: Cargo.toml
s09_salvo/: Cargo.toml  Dockerfile  README.md  bash.sh  docker-compose.yaml
s09_salvo/demo1/: Cargo.toml
s09_salvo/demo1/src/: lib.rs  main.rs  router.rs  server.rs
s09_salvo/entity/src/: mod.rs
s09_salvo/hello_world/: Cargo.toml
s09_salvo/hello_world/src/: main.rs
s09_salvo/migration/: Cargo.toml
s09_salvo/migration/src/: m20220101_000001_create_table.rs
s09_salvo/src/: app_state.rs  errors.rs  main.rs  route.rs
s09_salvo/src/api/: accounts.rs  broadcast.rs  close_signal.rs  ea.rs  health.rs  hello.rs  mod.rs  subscription.rs
s09_salvo/src/entity/: account.rs  history.rs  mod.rs  positions.rs  prelude.rs  time_series_position.rs
s09_salvo/src/enums/: enums.rs
s09_salvo/src/models/: mod.rs  req.rs
s09_salvo/src/storage/: account.rs  close_signal.rs  history.rs  mod.rs  positions.rs  statistics.rs  storage.rs  utils.rs
s12/demo1/: Cargo.toml
s12/demo1/src/: main.rs
s12/demo2/src/: main.rs
s13.5/demo1/src/: main.rs
s13.5/demo2/: Cargo.toml
s13.5/demo2/src/: main.rs
s13.5/linked_list/: Cargo.toml
s13.5/linked_list/src/: main.rs
s13.5/linked_list_v2/: Cargo.toml
s13.5/linked_list_v2/src/: lib.rs  link_v1.rs  link_v2.rs  main.rs
s13/demo1/src/: main.rs
s13/demo2/: Cargo.toml
s13/demo2/src/: main.rs
s13/demo3/: Cargo.toml
s13/demo3/src/: main.rs
s13/demo4/: Cargo.toml
s13/demo4/src/: main.rs
s13/demo5/: Cargo.toml
s13/demo5/src/: main.rs
s13/demo6/: Cargo.toml
s13/demo6/src/: main.rs
s13/demo7/: Cargo.toml
s13/demo7/src/: main.rs
s13/demo8/: Cargo.toml
s13/demo8/src/: lib.rs  main.rs
s13/demo9/: Cargo.toml
s13/demo9/src/: main.rs
s13/error_handling/: Cargo.toml
s13/error_handling/src/: main.rs
s13/iterator/: Cargo.toml
s13/iterator/src/: main.rs
s13/mimi_grep/: Cargo.toml
s13/mimi_grep/src/: lib.rs  main.rs
s13/test_demo/: Cargo.toml
s13/test_demo/src/: lib.rs
s13/tr/: Cargo.toml
s13/tr/src/: lib.rs  main.rs
simple_http/: Cargo.toml
simple_http/http/: Cargo.toml
simple_http/http/src/: http_request.rs  http_response.rs
simple_http/http_server/: Cargo.toml  README.md
simple_http/http_server/data/: orders.json
simple_http/http_server/public/: index.html
simple_http/http_server/src/: handler.rs  main.rs  (+2 more)
simple_http/tcp_client/: Cargo.toml
simple_http/tcp_server/: Cargo.toml
(+14 files in other folders)
