[package]
name = "ntex_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
ntex = { version = "2.0", features = ["tokio"] }
chrono = { version = "0.4.38" , features = ["serde"]}
dotenvy = "0.15.7"
serde = {version = "1.0.207", features = ["derive"]}
serde_json = "1.0.124"
sqlx = { version = "0.8.0", features = [
    "runtime-tokio-rustls", "macros", "postgres", "chrono"] }
log = "0.4.22"