[package]
name = "s07_1"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
async-std = { version = "1.8.0", features = ["attributes"] }

serde = "1.0.118"