[package]
name = "s09_salvo"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
salvo = { version = "0.70.0", features = ["affix", "serve-static"]}
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"
sea-orm = { version = "1.0.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "sqlx-postgres","chrono"] }
chrono = { version = "0.4.38" , features = ["serde"]}
dotenvy = "0.15.7"
serde = {version = "1.0.207", features = ["derive"]}
serde_json = "1.0.124"
log = "0.4.22"
maplit = "1.0.2"
async-trait = "0.1.81"
redis = { version = "0.26.1", features = ["tokio-comp"] }
xid = "1.1.1"
futures = "0.3.30"


[[bin]]
name = "myapp"
path = "src/main.rs"