[package]
name = "crate_demo_test"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }