[package]
name = "s04_1"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.7.0", features = ["unstable","attributes"] }
# async-std + native-tls
sqlx = { version = "0.4.0", features = [ "runtime-async-std-native-tls","postgres"] }
