[package]
name = "s04_2"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#json支持(必须)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#日期支持(必须)
chrono = { version = "0.4", features = ["serde"] }

#log日志支持(必须)
log = "0.4"
fast_log="1.2.9"

#rbatis支持，版本保持一致(必须)
rbatis =  { version = "1.8.41", featyres="mysql" }
rbatis-macro-driver = { version = "1.8.41" }

async-std = { version = "1.7.0", features = ["unstable","attributes"] }

lazy_static = "1.4.0"

md5 = "0.7.0"