[package]
name = "std_1"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
async-std = { version = "1.7.0", features = ["unstable", "attributes"] }