[package]
name = "std_1"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
redis = { version = "0.17.0", features = ["async-std-comp"] }
async-std = { version = "1.7.0", features = ["unstable", "attributes"] }
