[package]
name = "s07_2"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#hyper = {  git = "https://github.com/hyperium/hyper" }
#tokio = { version = "0.3.5", features = ["full"] }
#pretty_env_logger = "0.4"

hyper = "0.13.9"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"