[package]
name = "demo1"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.7.2"
salvo = { version = "0.11.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }