[package]
name = "caesar"
version = "0.1.0"
authors = ["dollarkillerx <adapawang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
chrono = "0.4.19"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }